# saas_shanthai

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt  setup.bat
backend/models/: __init__.py  otp.py  product.py  user.py
backend/routes/: __init__.py  auth.py  products.py  templates.py
backend/schemas/: __init__.py  product.py  user.py
backend/template_cache/: _metadata.json
backend/utils/: __init__.py  auth.py  email.py  otp.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: OTPInput.tsx
frontend/src/components/Layout/: DashboardLayout.tsx
frontend/src/pages/Auth/: LoginSignup.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Docs/: Docs.tsx  DocsBasics.tsx  DocsDatabase.tsx  DocsDeployment.tsx  DocsDevelop.tsx  DocsGithub.tsx  DocsGoogleAuth.tsx  DocsPayment.tsx  DocsSetup.tsx
frontend/src/pages/Marketplace/: Marketplace.tsx
frontend/src/pages/MyProducts/: MyProducts.tsx
frontend/src/pages/Settings/: Settings.tsx
frontend/src/pages/Subscription/: Subscription.tsx
frontend/src/pages/Templates/: Templates.tsx
frontend/src/services/: api.ts  productService.ts
frontend/src/store/: authStore.ts  productStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: auth.ts
